# QuiVive

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/commands/: mod.rs  owner.rs
src/handlers/: event_handler.rs  mod.rs
src/helpers/: botinfo.rs  command_utils.rs  credentials_helper.rs  database_helper.rs  delete_buffer.rs  embed_store.rs  mod.rs  mute_helper.rs  permissions_helper.rs  warn_helper.rs
src/structures/: cmd_data.rs  commands.rs  errors.rs  mod.rs
